--- a/blocksites/manifest.json
+++ b/blocksites/manifest.json
@@ -10,6 +10,9 @@
       "js": ["content_script.js"]
     }
   ],
+  "background": {
+    "scripts": ["background.js"]
+  },
     "permissions": ["history","tabs", "storage"],
  	 "browser_action": {
     "default_title": "Block unwanted sites!",
