--- a/blocksites/manifest.json
+++ b/blocksites/manifest.json
@@ -4,6 +4,9 @@
   "version": "2.1",
   "manifest_version":2,
   "description": "Auto closes the specified sites",
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
